fixed align-items

--- a/style.css
+++ b/style.css
@@ -24,9 +24,12 @@
 }
 
 .about-me {
-  /* display: flex;
-  align-self: center; */
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  text-align: center;
 }
+
 .projects {
   /* display: flex;
   align-self: center; */
@@ -39,9 +42,9 @@
 /* SKILLS AND TOOLS SECTION SIDE BY SIDE IN ABOUT ME */
 
 .skills-tools {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-content: space-between;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
 }
 
 .skills {
@@ -51,4 +54,5 @@
   justify-content: center;
   align-items: center;
   border: 1px solid black;
+  width: 300px;
 }
